...
                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <view key="tableHeaderView" contentMode="scaleToFill" id="dOL-mr-RST">
                                    <rect key="frame" x="0.0" y="0.0" width="393" height="826"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yn2-Xv-xes">
                                            <rect key="frame" x="20.000000000000007" y="50" width="90.666666666666686" height="42.666666666666657"/>
                                            <fontDescription key="fontDescription" name="ABeeZee-Italic" family="ABeeZee" pointSize="36"/>
                                            <color key="textColor" name="ThemeBlue"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="LRJ-tT-Zel">
...
                                                            <rect key="frame" x="0.0" y="44" width="353" height="1"/>
                                                            <color key="backgroundColor" name="ThemeGrey"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="1" id="9o3-T8-tOy"/>
                                                            </constraints>
                                                        </view>
                                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WS4-YY-ead">
                                                            <rect key="frame" x="0.0" y="0.0" width="353" height="44"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="44" id="zMt-L3-pfI"/>
                                                            </constraints>
                                                            <fontDescription key="fontDescription" name="ABeeZee-Italic" family="ABeeZee" pointSize="18"/>
                                                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="next" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="email"/>
...
                                                            <rect key="frame" x="0.0" y="44" width="353" height="1"/>
                                                            <color key="backgroundColor" name="ThemeGrey"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="1" id="lsY-Rp-5tt"/>
                                                            </constraints>
                                                        </view>
                                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vg7-Qq-TZD">
                                                            <rect key="frame" x="0.0" y="0.0" width="353" height="44"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="44" id="Q8f-fD-gyC"/>
                                                            </constraints>
                                                            <fontDescription key="fontDescription" name="ABeeZee-Italic" family="ABeeZee" pointSize="18"/>
                                                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" secureTextEntry="YES" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="password"/>
...
