...
            navVC.showColoredNavigationBar(.white)
            appDelegate.window?.switchRootViewController(to: navVC)
        }
    }
    
    func failureResponse(_ error: String) {
        UIAlertController.actionWith(andMessage: error, getStyle: .alert, controller: self, buttons: [UIAlertController.actionTitleStyle(title: "OK", style: .default)]) { _ in }
    }
}
extension CMSVC {
    private func setupButtons() {
        func setupStartInspectingButton() {
            onBtnStartInspectingOutlet.setTitle("Start Inspecting!", for: .normal)
...
