...
            onBtnLoginOutlet.backgroundColor = UIColor(named: HiveColor.ThemeYellow.rawValue)
            onBtnLoginOutlet.setTitleColor(UIColor.black, for: .normal)
            onBtnLoginOutlet.cornerRadius = onBtnSignUpOutlet.frame.height / 2
            onBtnLoginOutlet.titleLabel?.font = UIFont(name: "ABeeZee-Italic", size: 20)
        }
        func setupSignUpButton() {
            onBtnSignUpOutlet.setTitle("Create Account", for: .normal)
            onBtnSignUpOutlet.setTitleColor(UIColor(named: HiveColor.ThemeBlue.rawValue), for: .normal)
            onBtnSignUpOutlet.cornerRadius = onBtnSignUpOutlet.frame.height / 2
            onBtnSignUpOutlet.borderWidth = 1.5
            onBtnSignUpOutlet.borderColor = UIColor(named: HiveColor.ThemeBlue.rawValue)!
            onBtnSignUpOutlet.titleLabel?.font = UIFont(name: "ABeeZee-Italic", size: 20)
        }
...
